force-app/main/default/objects/noduplicates__Test_Obj2__c/noduplicates__Test_Obj2__c.object-meta.xml
<CustomObject>
    <label>Test Obj2</label>
    <nameField>
        <displayFormat>T2-{000000}</displayFormat>
        <label>Test Obj2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Obj2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>