force-app/main/default/objects/noduplicates__Test_Obj2__c/fields/noduplicates__Company__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>