force-app/main/default/objects/noduplicates__Test_Obj2__c/fields/noduplicates__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>