force-app/main/default/objects/noduplicates__Test_Obj2__c/fields/noduplicates__Phone__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>