force-app/main/default/objects/noduplicates__Test_Obj2__c/fields/noduplicates__Street__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>