force-app/main/default/objects/noduplicates__Test_Obj2__c/fields/noduplicates__Test_Obj1__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Test_Obj1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Obj1</label>
    <referenceTo>noduplicates__Test_Obj1__c</referenceTo>
    <relationshipLabel>Test Obj2</relationshipLabel>
    <relationshipName>Test_Obj2</relationshipName>
    <type>Lookup</type>
</CustomField>