force-app/main/default/objects/noduplicates__Test_Obj2__c/listViews/noduplicates__All.listView-meta.xml
<ListView>
    <fullName>noduplicates__All</fullName>
    <columns>NAME</columns>
    <columns>noduplicates__First_Name__c</columns>
    <columns>noduplicates__Last_Name__c</columns>
    <columns>noduplicates__Company__c</columns>
    <columns>noduplicates__Phone__c</columns>
    <columns>noduplicates__Street__c</columns>
    <columns>noduplicates__Test_Obj1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>